Done the reset password

--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
+    <title>Forgot Password</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <section>
-        <div class="login-box">
-            <form action="http://localhost:3000/login" method="POST" autocomplete="off">
-                <h2>Login</h2>
+        <div class="forgot-password-box">
+            <form action="http://localhost:3000/update-password" method="POST" autocomplete="off">
+                <h2>Forgot Password</h2>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
                     <input type="email" name="email" required autocomplete="off">
@@ -19,21 +19,19 @@
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" name="password" required autocomplete="off">
-                    <label>Password</label>
+                    <input type="password" id="newPassword" name="newPassword" required>
+                    <label>New Password</label>
                 </div>
-                <div class="remember-forgot">
-                    <label><input type="checkbox"> Remember me</label>
-                    <a href="forgot-password.html">Forgot Password?</a>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" id="confirmPassword" name="confirmPassword" required>
+                    <label>Confirm Passowrd</label>
                 </div>
-                <button type="submit">Login</button>
-                <div class="register-link">
-                    <p>Don't have an account? <a href="register.html">Register</a></p>
-                </div>
+                <button type="submit">Reset Password</button>
             </form>
         </div>
     </section>
-      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
