--- a/public/register.html
+++ b/public/register.html
@@ -9,21 +9,21 @@
 <body>
     <section>
         <div class="login-box">
-            <form action="http://localhost:3000/register" method="POST">
+            <form action="http://localhost:3000/register" method="POST" autocomplete="off">
                 <h2>Register</h2>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person"></ion-icon></span>
-                    <input type="text" name="username" required>
+                    <input type="text" name="username" required autocomplete="off">
                     <label>Username</label>
                 </div>
                 <div class="input-box emai-label">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" name="email" required>
+                    <input type="email" name="email" required autocomplete="off">
                     <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" name="password" required>
+                    <input type="password" name="password" required autocomplete="off">
                     <label>Password</label>
                 </div>
                
