--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
                     <label>Email</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" name="password" required autocomplete="off">
+                    <span class="icon"><ion-icon id="eye-icon" name="eye-off-outline" onclick="togglePasswordVisibility()"></ion-icon></span>
+                    <input type="password" id="password" name="password" required autocomplete="off">
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
@@ -33,7 +33,9 @@
             </form>
         </div>
     </section>
-      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="scripts/script.js"></script>
+        
 </body>
 </html>
