--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,20 @@
 </head>
 <body>
     <section>
+        <header class="header-title">
+            <h1>Personalized Fitness and Health Coach System</h1>
+        </header>
         <div class="login-box">
-            <form id="loginForm" action="http://localhost:3000/auth/login" method="POST" autocomplete="off">
+            <form id="loginForm" action="http://localhost:3000/auth/login" method="POST">
                 <h2>Login</h2>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" name="email" required autocomplete="off">
+                    <input type="email" name="email" required>
                     <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon id="eye-icon" name="eye-off-outline" onclick="togglePasswordVisibility()"></ion-icon></span>
-                    <input type="password" id="password" name="password" required autocomplete="off">
+                    <input type="password" id="password" name="password" required>
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
