--- a/public/register.html
+++ b/public/register.html
@@ -8,22 +8,25 @@
 </head>
 <body>
     <section>
+        <header class="header-title">
+            <h1>Personalized Fitness and Health Coach System</h1>
+        </header>
         <div class="login-box">
-            <form action="http://localhost:3000/register" method="POST" autocomplete="off">
+            <form action="http://localhost:3000/register" method="POST">
                 <h2>Register</h2>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person"></ion-icon></span>
-                    <input type="text" name="username" required autocomplete="off">
+                    <input type="text" name="username" required>
                     <label>Username</label>
                 </div>
                 <div class="input-box emai-label">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" name="email" required autocomplete="off">
+                    <input type="email" name="email" required>
                     <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon id="eye-icon" name="eye-off-outline" onclick="togglePasswordVisibility()"></ion-icon></span>
-                    <input type="password" id="password" name="password" required autocomplete="off">
+                    <input type="password" id="password" name="password" required>
                     <label>Password</label>
                 </div>
                
