Changes in home

--- a/public/home.html
+++ b/public/home.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-    <div class="home">
+    <div class="top-text">
         <div class="inside-home">
             <button id="logoutButton">Logout</button>
         </div>
+        <h1>Welcome to Your Personalized Fitness Journey</h1>
+        <p>Track your goals, height, weight, and more to achieve your health and fitness objectives.</p>
+    </div>
+    
+    <div class="home">
+        <h5 style="font-size: 20px;">Fill out this form</h5>
         <form id="registerForm">
             <input type="text" id="username" placeholder="Username" required />
-            <input type="password" id="password" placeholder="Password" required />
             <input type="number" id="height" placeholder="Height (cm)" required />
             <input type="number" id="weight" placeholder="Weight (kg)" required />
             <input type="text" id="goals" placeholder="Goals" required />
