edit the fitness and nutrition button

--- a/public/home.html
+++ b/public/home.html
@@ -25,8 +25,8 @@
             <h1>Welcome to Your Personalized Fitness Journey</h1>
             <p>Track your goals, height, weight, and more to achieve your health and fitness objectives.</p>
             <div>
-                <button type="button"><span></span>Fitness Plan</button>
-                <button type="button"><span></span>Nutrition Plan</button>
+                <button type="button"><span></span><a href="#fitness-plan">Fitness Plan</a></button>
+                <button type="button"><span></span><a href="#nutrition-plan">Nutrition Plan</a></button>
             </div>
         </div>
     </div>
