--- a/public/home.html
+++ b/public/home.html
@@ -125,6 +125,22 @@
             </div>
         </div>
     </section>
+    <footer>
+        <ul class="social_icon">
+            <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+        </ul>
+        <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Reviews</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Payment</a></li>
+        </ul>
+        <p>@2024 Persionalized Fitness and Health Coach System | All Rights Reserved</p>
+    </footer>
 </body>
 <!-- <script>
     document.getElementById('registerForm').addEventListener('submit', function (e) {
