Edit the forgot password

--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <section>
+        <header class="header-title">
+            <h1>Personalized Fitness and Health Coach System</h1>
+        </header>
         <div class="forgot-password-box">
             <form action="http://localhost:3000/update-password" method="POST" autocomplete="off">
                 <h2>Forgot Password</h2>
