Edit contact and footer

--- a/public/home.html
+++ b/public/home.html
@@ -77,31 +77,31 @@
                     <div class="icon"><b></b><ion-icon name="location-sharp"></ion-icon></div>
                     <div class="text">
                         <h3>Address</h3>
-                        <p>412355213 dgd asdadadasd,<br>Oaadsad,
-                        sadadad,<br>12313313</p>
+                        <p>Persionalized Fitness and Health,<br>First street,
+                        colombo,<br>Sri Lanka</p>
                     </div>
                 </div>
                 <div class="box">
                     <div class="icon"><b></b><ion-icon name="call"></ion-icon></div>
                     <div class="text">
                         <h3>Phone</h3>
-                        <p>000-000-0000</p>
+                        <p>011-222-3344</p>
                     </div>
                 </div>
                 <div class="box">
                     <div class="icon"><b></b><ion-icon name="mail"></ion-icon></div>
                     <div class="text">
                         <h3>Email</h3>
-                        <p>temparyEmail@gmail.com</p>
+                        <p>fitnessAndHealth@gmail.com</p>
                     </div>
                 </div>
-                <h2 class="txt">Connect with us</h2>
+                <!-- <h2 class="txt">Connect with us</h2>
                 <ul class="sci">
                     <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
                     <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
                     <li><a href=""><ion-icon name="logo-linkedin"></ion-icon></a></li>
                     <li><a href=""><ion-icon name="logo-whatsapp"></ion-icon></a></li>
-                </ul>
+                </ul> -->
             </div>
             <div class="contactForm">
                 <form id="contactForm">
