--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,21 @@
             }
         });
 
+        function togglePasswordVisibility() {
+            const passwordInput = document.getElementById('password');
+            const eyeIcon = document.getElementById('eye-icon');
+            console.log('Toggling password visibility'); // Debugging log
+
+            // Toggle the password type between 'password' and 'text'
+            if (passwordInput.type === "password") {
+                passwordInput.type = "text";
+                eyeIcon.name = "eye-outline"; // Change icon to 'eye' when visible
+            } else {
+                passwordInput.type = "password";
+                eyeIcon.name = "eye-off-outline"; // Change icon to 'eye-off' when hidden
+            }
+        }
+
         </script>
         
 </body>
