Fixed the autofill issue

--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -13,16 +13,16 @@
             <h1>Personalized Fitness and Health Coach System</h1>
         </header>
         <div class="forgot-password-box">
-            <form action="http://localhost:3000/update-password" method="POST" autocomplete="off">
+            <form action="http://localhost:3000/update-password" method="POST">
                 <h2>Forgot Password</h2>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" name="email" required autocomplete="off">
+                    <input type="email" name="email" required autocomplete="new-email">
                     <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" id="newPassword" name="newPassword" required>
+                    <input type="password" id="newPassword" name="newPassword" autocomplete="new-password">
                     <label>New Password</label>
                 </div>
                 <div class="input-box">
