--- a/public/register.html
+++ b/public/register.html
@@ -16,17 +16,17 @@
                 <h2>Register</h2>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person"></ion-icon></span>
-                    <input type="text" name="username" required>
+                    <input type="text" name="username" required autocomplete="new-username">
                     <label>Username</label>
                 </div>
                 <div class="input-box emai-label">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" name="email" required>
+                    <input type="email" name="email" required autocomplete="new-email">
                     <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon id="eye-icon" name="eye-off-outline" onclick="togglePasswordVisibility()"></ion-icon></span>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" required autocomplete="new-password">
                     <label>Password</label>
                 </div>
                
