--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
                 <h2>Login</h2>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" name="email" required autocomplete="new-email">
+                    <input type="email" name="email" required autocomplete="email">
                     <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon id="eye-icon" name="eye-off-outline" onclick="togglePasswordVisibility()"></ion-icon></span>
-                    <input type="password" id="password" name="password" required autocomplete="new-password">
+                    <input type="password" id="password" name="password" required autocomplete="password">
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
