--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -21,7 +21,7 @@
                     <label>Email</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <span class="icon"><ion-icon id="eye-icon" name="eye-off-outline" onclick="togglePasswordVisibility2()"></ion-icon></span>
                     <input type="password" id="newPassword" name="newPassword" autocomplete="new-password">
                     <label>New Password</label>
                 </div>
@@ -36,5 +36,6 @@
     </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
