Add some name and id attribute

--- a/public/home.html
+++ b/public/home.html
@@ -61,9 +61,9 @@
         <div class="home">
                 <form id="registerForm">
                     <h4>Create Your Personalized Nutrition Plan</h4>
-                    <input type="text" id="name" placeholder="Your name" required />
-                    <input type="number" id="height" placeholder="Height (cm)" required />
-                    <input type="number" id="weight" placeholder="Weight (kg)" required />
+                    <input type="text" id="name" autocomplete="name" placeholder="Your name" required />
+                    <input type="number" id="height" autocomplete="height" placeholder="Height (cm)" required />
+                    <input type="number" id="weight" autocomplete="weight" placeholder="Weight (kg)" required />
                     <label for="goal">Health Goal:</label>
                     <select id="goal" name="goal" required>
                         <option value="lose">Lose Weight</option>
