--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,16 @@
                 <h2>Login</h2>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" name="email" required autocomplete="email">
-                    <label>Email</label>
+                    <input type="email" id="email" name="email" required autocomplete="email">
+                    <label for="email">Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon id="eye-icon" name="eye-off-outline" onclick="togglePasswordVisibility()"></ion-icon></span>
-                    <input type="password" id="password" name="password" required autocomplete="password">
-                    <label>Password</label>
+                    <input type="password" id="password" name="password" required autocomplete="new-password">
+                    <label for="password">Password</label>
                 </div>
                 <div class="remember-forgot">
-                    <label><input type="checkbox"> Remember me</label>
+                    <label><input type="checkbox" id="checkbox"> Remember me</label>
                     <a href="forgot-password.html">Forgot Password?</a>
                 </div>
                 <button type="submit">Login</button>
