--- a/public/home.html
+++ b/public/home.html
@@ -77,6 +77,56 @@
             </div>
     </section>
 
+    <section id="team" class="team-section">
+        <h1>Meet Our Trainers</h1>
+        <div class="team-container">
+            <div class="team-member">
+                <img src="images/trainer1.png" alt="Trainer 1">
+                <h3>John Doe</h3>
+                <p>Certified Personal Trainer with over 10 years of experience in helping clients.</p>
+                <ul class="social_icon">
+                    <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                </ul>
+            </div>
+            <div class="team-member">
+                <img src="images/trainer2.png" alt="Trainer 2">
+                <h3>Jane Smith</h3>
+                <p>Nutrition Expert specializing in personalized meal plans and healthy lifestyle.</p>
+                <ul class="social_icon">
+                    <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                </ul>
+            </div>
+            <div class="team-member">
+                <img src="images/trainer3.png" alt="Trainer 3">
+                <h3>Mark Lee</h3>
+                <p>Yoga Instructor with expertise in improving flexibility, strength, and mental clarity.</p>
+                <ul class="social_icon">
+                    <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                </ul>
+            </div>
+            <div class="team-member">
+                <img src="images/trainer4.png" alt="Trainer 4">
+                <h3>Susan Brown</h3>
+                <p>Strength Coach dedicated to helping clients build muscle and improve endurance.</p>
+                <ul class="social_icon">
+                    <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    
     <section id="payment">
         <h1>Reserve Your Own Plan</h1>
         <p>Choose a plan that suits your fitness journey. Manage your subscriptions easily and start achieving your goals today!</p>
