Did some changes

--- a/public/home.html
+++ b/public/home.html
@@ -33,7 +33,7 @@
         
     <section id="fitness-plan">
         <h2>Fitness Plan</h2>
-        <p>Discover custom workout plans tailored to your needs. Whether you're looking to build strength, improve endurance, lose weight, or enhance flexibility,<br>we offer a variety of personalized fitness plans that align with your goals.</p>
+        <p>Discover custom workout plans tailored to your needs. Whether you're looking to build strength, improve endurance, lose weight, or enhance flexibility, we offer a variety of personalized fitness plans that align with your goals.</p>
         <div class="home">
                 <form id="registerForm">
                     <h4>Create Your Personalized Fitness Plan</h4>
@@ -56,7 +56,7 @@
 
     <section id="nutrition-plan">
         <h2>Nutrition Plan</h2>
-        <p>Get personalized meal plans that fit your lifestyle. We consider your dietary preferences, restrictions, and activity level to create a balanced and sustainable eating plan.<br/>With delicious recipes, portion control tips, and expert guidance, you’ll feel energized, satisfied.</p>
+        <p>Get personalized meal plans that fit your lifestyle. We consider your dietary preferences, restrictions, and activity level to create a balanced and sustainable eating plan. With delicious recipes, portion control tips, and expert guidance, you’ll feel energized, satisfied.</p>
         <div class="home2">
                 <form id="registerForm2">
                     <h4>Create Your Personalized Nutrition Plan</h4>
@@ -79,6 +79,9 @@
 
     <section id="team" class="team-section">
         <h1>Meet Our Trainers</h1>
+        <p class="team-intro">
+            Our team of expert trainers is here to guide you on your fitness journey. With years of experience and dedication, they are committed to helping you achieve your personal goals and maintain a healthy lifestyle.
+        </p>
         <div class="team-container">
             <div class="team-member">
                 <img src="images/trainer1.png" alt="Trainer 1">
@@ -224,19 +227,19 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="footer">
         <ul class="social_icon">
-            <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+            <li><a href="#footer"><ion-icon name="logo-facebook"></ion-icon></a></li>
+            <li><a href="#footer"><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href="#footer"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="#footer"><ion-icon name="logo-twitter"></ion-icon></a></li>
         </ul>
         <ul class="menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Reviews</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Payment</a></li>
+            <li><a href="#fitness-plan">Fintness Plan</a></li>
+            <li><a href="#contact-us">Contact</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#payment">Payment</a></li>
         </ul>
         <p>@2024 Persionalized Fitness and Health Coach System | All Rights Reserved</p>
     </footer>
